# c-multiple-platform-compilation-test

./: .clangd  CMakeLists.txt  main  main.c  readme.md
.github/workflows/: builds.yml
